@@ -69,7 +69,10 @@
 			<label index="label_capacity">Capacity</label>
 			<label index="label_pictures">Pictures</label>
 			<label index="label_currentround">Current round</label>
+
 			<label index="label_matchstatus_10">postponed</label>
+			<label index="label_matchstatus_postponed">postponed</label>
+			<label index="label_matchstatus_invalid">invalid</label>
 
 			<label index="label_basepoint">Base point for distance calculation</label>
 			<label index="label_distance">Distance</label>
@@ -128,7 +131,10 @@
 			<label index="label_capacity">Kapazität</label>
 			<label index="label_pictures">Bilder</label>
 			<label index="label_currentround">Aktueller Spieltag</label>
+
 			<label index="label_matchstatus_10">Verlegt</label>
+			<label index="label_matchstatus_postponed">Verlegt</label>
+			<label index="label_matchstatus_invalid">Ungültig</label>
 
 			<label index="label_basepoint">Ausgangspunkt für Entfernungsberechnung</label>
 			<label index="label_distance">Entfernung</label>
