@@ -61,8 +61,12 @@ Spielplan für Schiedsrichter ###REFEREE_DCNAME###
 <!-- ###RESULT_STATUS_0### Ergebnis vor dem Spiel -->
 
 <!-- ###RESULT_STATUS_-10### Ergebnis bei Spielverlegung -->
-verlegt
+###LABEL_MATCHSTATUS_POSTPONED###
 <!-- ###RESULT_STATUS_-10### Ergebnis bei Spielverlegung -->
+
+<!-- ###RESULT_STATUS_-1### Ergebnis bei Spielverlegung -->
+###LABEL_MATCHSTATUS_INVALID###
+<!-- ###RESULT_STATUS_-1### Ergebnis bei Spielverlegung -->
 
 <!-- ###RESULT_STATUS_1### Ergebnis während des Spiels -->
 ###MATCH_GOALS_HOME###&nbsp;:&nbsp;###MATCH_GOALS_GUEST###
